2011-08-30 - Version 0.3.4
- Feature: Added support for Forerunner 301
- Info: Updated plugin version number to 3.0.1.0 - added new function ParentDevice()

2011-06-28 - Version 0.3.3
- Bugfix: Some sites do not provide a file extension, so saving a file to the device failed. The plugin now tries to detect the extension.

2011-06-17 - Version 0.3.2
- Bugfix: When uploading a single TCX file, the GPS points were unintentionally stripped from the upload

2011-05-09 - Version 0.3.1
- Bugfix: Canceling not running jobs is now working without javascript error (needed by write heart rate on connect.garmin.com)
- Feature: Added plugin functionality DirectoryListing

2011-03-27 - Version 0.3.0
- Feature: All Filebased Garmin Devices should now be supported (with file GarminDevice.xml)
- Feature: Reading of TcxProfile, Crs, CrsDir and Workout at filebased devices is now possible
- Feature: Added progress bar change
- Feature: Added new function ReadableFileListing
- Bugfix: Sorting of fit file output
- Bugfix: Now setting udev rule to access Edge305/Forerunner305 

2011-01-05 - Version 0.2.8
- Added support for Edge 500
- Changed official garmin plugin version number to 2.9.3.0

2011-01-03 - Version 0.2.7
- Added support for Edge 800
- Manipulation of Garmin Javascript to disable browser check (no more User Agent setting necessary)
- Removed dependency to libboost (Better portability)
- Now working with Chrome

2010-10-16 - Version 0.2.6
- Bugfix: Edge305/Forerunner305 reported long/lat with only 4 positions after decimal point (which is not enough)

2010-10-04 - Version 0.2.5
- Bugfix: Edge305/Forerunner305 reported multiple laps in one lap

2010-09-29 - Version 0.2.4
- Bugfix: Edge305/Forerunner305 did not provide the complete route when (auto)pause function was used

2010-09-26 - Version 0.2.3
- Added support for Oregon/Dakota to read FitnessData from Device
- Added support for gpsies.com (only Oregon/Dakota/Edge705/Edge305/Forerunner305)