@@ -1,6 +1,7 @@
 2011-08-30 - Version 0.3.4
 - Feature: Added support for Forerunner 301
 - Info: Updated plugin version number to 3.0.1.0 - added new function ParentDevice()
+- Bugfix: First time using the plugin often caused problems because of the "New configuration created" - the message was removed
 
 2011-06-28 - Version 0.3.3
 - Bugfix: Some sites do not provide a file extension, so saving a file to the device failed. The plugin now tries to detect the extension.
